[gd_scene load_steps=7 format=3 uid="uid://w7m2uhyqp1ir"]

[ext_resource type="Texture2D" uid="uid://b4a670lt0tvg1" path="res://Assets/Background/Yellow.png" id="1_xc818"]
[ext_resource type="FontFile" uid="uid://26gpa7mi2g8w" path="res://Fonts/HeavyDataNerdFont-Regular.ttf" id="2_e2y6t"]
[ext_resource type="Script" path="res://Scripts/game_ss_button.gd" id="2_y5wld"]
[ext_resource type="Script" path="res://Scripts/game_pp.gd" id="4_sgaj2"]
[ext_resource type="PackedScene" uid="uid://dgwt0ooxrefbh" path="res://Games/FlappyBird/game.tscn" id="5_jbrpe"]

[sub_resource type="LabelSettings" id="LabelSettings_5h02n"]
font = ExtResource("2_e2y6t")
font_size = 50
font_color = Color(0, 0, 0, 1)
shadow_size = 10
shadow_color = Color(1, 0.694118, 0.835294, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_xc818")
stretch_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -137.5
offset_top = 20.0
offset_right = 137.5
offset_bottom = 79.0
grow_horizontal = 2
text = "Assessment"
label_settings = SubResource("LabelSettings_5h02n")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.5
offset_top = 340.0
offset_right = 100.5
offset_bottom = 399.0
grow_horizontal = 2
text = "Games"
label_settings = SubResource("LabelSettings_5h02n")
horizontal_alignment = 1

[node name="game_ss_button" type="Button" parent="."]
layout_mode = 0
offset_left = 238.0
offset_top = 466.0
offset_right = 404.0
offset_bottom = 542.0
text = "Space shooter"
script = ExtResource("2_y5wld")

[node name="game_pp" type="Button" parent="."]
layout_mode = 0
offset_left = 520.0
offset_top = 468.0
offset_right = 641.0
offset_bottom = 544.0
text = "Ping Pong"
script = ExtResource("4_sgaj2")
flappy = ExtResource("5_jbrpe")

[node name="game_reach" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.5
offset_top = 150.0
offset_right = 60.5
offset_bottom = 226.0
grow_horizontal = 2
text = "Reach"

[node name="floppy_bird" type="Button" parent="."]
layout_mode = 0
offset_left = 771.0
offset_top = 465.0
offset_right = 892.0
offset_bottom = 541.0
text = "Flappy Bird"

[connection signal="pressed" from="game_ss_button" to="game_ss_button" method="_on_pressed"]
[connection signal="pressed" from="game_pp" to="game_pp" method="_on_pressed"]
[connection signal="pressed" from="game_reach" to="game_pp" method="_on_game_reach_pressed"]
[connection signal="pressed" from="floppy_bird" to="game_pp" method="_on_floppy_bird_pressed"]
